# OpenCV-tools-image-process

./: .gitignore  CLAUDE.md  FEATURE_DETECTION_BASICS_SPLIT_PLAN.md  FILENAME_MIGRATION_PLAN.md  FILE_RENAMING_PLAN.md  IMAGE_PROCESSING_TECHNIQUES_SPLIT_PLAN.md  POETRY_GUIDE.md  PROJECT_CLEANUP_REPORT.md  README.md  SETUP_COMPLETE.md  ULTIMATE_PROJECT_GUIDE.md  pyproject.toml  pytest.ini  quick_start.sh  requirements.txt  system_validation_report.json  test_report_m7_projects.json
01_fundamentals/: 2.1.1_python_numpy_basics.ipynb  2.1.2_opencv_installation.md  2.1.3_computer_vision_concepts.ipynb  2.1.4_opencv_fundamentals.ipynb  README.md  computer_vision_concepts.ipynb  opencv_fundamentals.ipynb
02_core_operations/: 2.2.1_image_io_display.ipynb  2.2.2_geometric_transformations.ipynb  2.2.3_color_spaces.ipynb  2.2.4_arithmetic_operations.ipynb  README.md  image_io_display.ipynb  image_processing_techniques.ipynb
03_preprocessing/: 3.1.1_filtering_smoothing.ipynb  3.1.2_morphological_ops.ipynb  3.1.3_edge_detection.ipynb  3.2.1_histogram_processing.ipynb  3.2.2_noise_reduction.ipynb  3.2.3_thresholding.ipynb  README.md
04_feature_detection/: 4.1.1_corner_detection.ipynb  4.1.2_feature_descriptors.ipynb  4.1.3_object_tracking.ipynb  4.2.1_template_matching.ipynb  README.md
05_machine_learning/: 5.1.1_face_detection.ipynb  5.1.2_WBS_object_classification.ipynb  5.1.3_dlib_integration.ipynb  5.2.1_dnn_integration.ipynb  5.2.1_opencv_dnn_module.ipynb  5.2.2_realtime_detection.ipynb  README.md  README_5.1.2.md  README_5.1.3.md  test_notebook.py
06_exercises/: README.md
06_exercises/advanced/: 6.3.1_custom_algorithm_implementation.ipynb  6.3.2_performance_optimization_challenge.ipynb  6.3.3_research_project_template.ipynb
06_exercises/beginner/: 6.1.2_drawing_functions_practice.ipynb  bgr_channel_operations.ipynb  comprehensive_basics.ipynb  filtering_applications.ipynb
07_projects/: README.md
07_projects/augmented_reality/: 7.4.1_marker_detection.py  7.4.2_pose_estimation.py
07_projects/document_scanner/: 7.2.1_edge_detection_module.py  7.2.2_perspective_correction.py  7.2.3_ocr_integration.py
07_projects/medical_imaging/: 7.3.1_image_enhancement.py  7.3.2_region_segmentation.py
07_projects/security_camera/: 7.1.1_real_time_detection.py  7.1.2_motion_detection.py  7.1.3_alert_system.py
OpenCV/: Day0_py_np.html  Day0_py_np.ipynb  Day1_OpenCV.html  Day1_OpenCV.ipynb  Day2_OpenCV.ipynb  Day2_OpenCV2.ipynb  Day3_OpenCV.ipynb
OpenCV/HW/: Q_04_08.ipynb  Q_09_12.ipynb
OpenCV/dlib_output/: embeddings.pickle  le.pickle  model.svm  recognizer.pickle
OpenCV/image/: dlib03.jfif  face68.jfif  mybaby_sift_kp.npy
assets/: README.md
assets/images/basic/: LBPH29_1.jfif  colorMap.jfif  gamma02.jfif  mybaby_rootsift_kp.npy
docs/: DEPLOYMENT_GUIDE.md  PROJECT_SUMMARY.md  USER_MANUAL.md
docs/guides/: dlib_integration_guide.md
docs/legacy/: installation_old.md  opencv_original_readme.md  project_reorganization_history.md
tests/: README.md  __init__.py  conftest.py  test_image_utils.py  test_performance.py  test_projects_integration.py  test_system_validation.py  test_visualization.py
utils/: __init__.py  image_utils.py  performance.py  visualization.py
